--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 requests
-pycryptodome
-curl_cffi 
-aiohttp
 fastapi
-browser_cookie3
 uvicorn
-js2py
 quickjs 
+requests
+pycryptodome
+curl_cffi
+aiohttp
+certifi
+browser_cookie3
+websockets
+js2py
+flask
+flask-cors
+typing-extensions
 PyExecJS
-
